force-app/main/default/objects/ProductoDeCampana__c/fields/CampanaPublicitaria__c.field-meta.xml
<CustomField>
    <fullName>CampanaPublicitaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña Publicitaria</label>
    <referenceTo>Campana__c</referenceTo>
    <relationshipLabel>Productos de Campañas</relationshipLabel>
    <relationshipName>Productos_de_Campanas</relationshipName>
    <type>Lookup</type>
</CustomField>