force-app/main/default/objects/ProductoDeCampana__c/fields/CantidadPendiente__c.field-meta.xml
<CustomField>
    <fullName>CantidadPendiente__c</fullName>
    <formula>CantidadTotal__c -  CantidadRecibida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad Pendiente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>